--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,13 @@ project(MIAMI_UNIVERSITY_CSE_NOTES)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_C_STANDARD 11)
 
+find_package(OpenMP)
+if (OPENMP_FOUND)
+    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
+endif()
+
 # CSE 278
 add_executable(CSE_278_CLASSES
         "CSE 278 (Systems I - Introduction to Systems Programming)/Classes/main.cpp"
@@ -59,3 +66,15 @@ add_executable(CSE_381_IPC_SHARED_MEMORY
 
 add_executable(CSE_381_NETWORKING_SERVER
         "CSE 381 (Systems II - OS, Currency, Virtualization, and Security)/Networking/server.c")
+
+add_executable(CSE_381_MULTITHREADING_PTHREAD
+        "CSE 381 (Systems II - OS, Currency, Virtualization, and Security)/Multithreading/pthread.c")
+
+add_executable(CSE_381_MULTITHREADING_OPENMP
+        "CSE 381 (Systems II - OS, Currency, Virtualization, and Security)/Multithreading/OpenMP.c")
+
+add_executable(CSE_381_MULTITHREADING_THREAD
+        "CSE 381 (Systems II - OS, Currency, Virtualization, and Security)/Multithreading/thread.cpp")
+
+add_executable(CSE_381_PARALLELISM_TASK
+        "CSE 381 (Systems II - OS, Currency, Virtualization, and Security)/Parallelism/Task Parallelism.c")
